--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+}
+header {
+    background-color: #2e64a1;
+    padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    color: white;
+    font-weight: 500;
+    font-style: italic;
+    /* display: inline-flex; */
+    /* display: inline-block;
+    position: relative; */
+    text-align: center;
+    
+}
+nav {
+    background-color: #6da9ed;
+    margin-bottom: 20px;
+}
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+nav ul li {
+    flex-grow: 1;
+}
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    /* background-color: orange; */
+    padding: 3px 0;
+    display: flex;
+    justify-content: center;
+}
+nav ul li a:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+nav ul li a.activo {
+    background-color: #4c76a5;
+}
+footer {
+    background-color: #ccc;
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.holder {
+    width: 960px;
+    max-width: 960px;
+    margin: 0 auto;
+    /* background-color: orange; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+    color: #2e64a1;
+    font-weight: 400;
 }
